--- a/GeorgesRecipeRoomFullStack/client/src/index.css
+++ b/GeorgesRecipeRoomFullStack/client/src/index.css
@@ -5,9 +5,74 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(2, 0, 36);
+    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
+    color:rgba(0, 212, 255, 1);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.authFormContainer{
+  margin-top: 50px;
+}
+
+.pageTitles{
+  margin-bottom: 40px;
+}
+
+.registerLink{
+  margin-left: 15px;
+  color: blueviolet;
+ 
+}
+a {
+  color:blueviolet;
+  text-decoration: none;
+}
+
+.submitButton{
+  margin-top: 10px;
+  width: 200px;
+
+}
+
+.recipeCard{
+  margin: 0 auto;
+  width: 600px;
+}
+
+.card{
+  margin-top: 20px;
+  margin-right: 10px;
+  border: 1px gray solid;
+  font-size: .8em;
+  width: 100%;
+  margin-bottom: 10px;
+  
+}
+.card-body{
+  margin: 0 auto;
+}
+
+img {
+  border-radius: 10px;
+}
+
+
+.card-title {
+  font-size: 2.2em;
+  color: black;
+  font-weight: 500;
+}
+
+.card-footer {
+  color: black;
+  font-weight: 600;
+}
+
+.navbar-brand{
+ color: rgba(0, 212, 255, 1) !important;
 }
